<resources>
    <string name="app_name">WASSUP</string>
    <string name="프로필">프로필 사진 교체</string>
    <string name="갤러리">갤러리</string>
    <string name="카메라">카메라</string>
    <string name="로고">로고</string>
    <string name="안녕하세요">안녕하세요</string>
    <string name="다음">다음</string>
    <string name="회원가입">Sign up</string>
    <string name="들어가기">Sign in</string>
    <string name="아이디">E-mail</string>
    <string name="이메일양식"></string>
    <string name="비밀번호">Password</string>
    <string name="비밀번호입력">Password</string>
    <string name="로그인버튼">로그인</string>
    <string name="가입하기버튼">가입하기</string>
    <string name="로그인">로그인</string>
    <string name="닉네임">닉네임</string>
    <string name="뒤로가기버튼">뒤로가기</string>
    <string name="가입선택지">회원가입 방법을 선택해주세요</string>
    <string name="loginauthentic">로그인 정보가 없습니다. 인증을 진행해 주세요</string>
    <string name="입장하기버튼">들어가기</string>
    <string name="게시판">게시판</string>
    <string name="설정">설정</string>
    <string name="메인">메인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="검색">검색</string>
    <string name="default_web_client_id1">666834309318-opf667pdsmt5ei1cs94toq9q00kc3sd0.apps.googleusercontent.com</string>
    <string name="구글로그인">구글로그인버튼</string>
    <string name="title_home">메인</string>
    <string name="title_cam">카메라</string>
    <string name="title_sets">세팅</string>
    <string name="app_main">Draw my Lids</string>
    <string name="submorphing">STEP1 \n 원하는 눈썹이 포함된 사진을 선택해주세요.\n(정면사진)</string>
    <string name="subfrgcam">Morph to Your Face</string>
    <string name="usermorphing">STEP2 \n 눈썹이 포함된 얼굴사진을 선택해 주세요.\n(정면사진)</string>
    <string name="합성불러오기">Click LOAD FACE Button</string>
    <string name="합성멘트">Morphing Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="WAIT">잠시만 기다려주세요</string>
    <string name="CAMERAGUIDE">얼굴을 가이드 선 영역에 맞추고 촬영버튼을 눌러주세요.</string>
    <string name="눈썹추천">2. 얼굴형에 따른 눈썹 추천</string>
    <string name="눈썹다듬는법">A: 눈썹 앞머리는 코끝과 동일한 지점에서 시작되도록 해주세요 \n B: 눈썹중에 가장 솟아 있는 눈썹산은 눈동자의 끝과 길이가 맞으면 자연스럽습니다. \n C: 눈썹이 끝나는 지점과 코끝과의 \n각도는 45도가 가장 이상적입니다.</string>
    <string name="긴얼굴형">눈썹꼬리를 가늘게 뺀 일자형 추천!\n위아래로 이어지는 시선을분산시켜\n시각적으로 얼굴이 덜 길어 보이는 효과를 줄 수 있음.</string>
    <string name="둥근얼굴형">둥근 얼굴형은 얼굴의 너비와 길이가 비슷하고, 볼 면적이 넓은것이 특징!\n눈썹산을 깎아서 각지게 표현하면 얼굴선이 살아 갸름해보이고 세련된 느낌을 줄 수 있음.</string>
    <string name="각진얼굴형">턱이 각지고 광대가 도드라져, 자칫 인상이 강해보일수 있는 얼굴형. 일자 눈썹보다는 눈썹산이 살짝 살아있는 아치형으로 그리는것이 좋음. 펜슬보다 섀도우 사용이 적합</string>
    <string name="역삼각얼굴형">뾰족한 턱, 넓은 볼, 좁은 이마가 특징인 역삼각 얼굴형은 둥근 눈썹이 어울림. 눈썹 꼬리를 짧게하면 넓은 볼을 좁아 보이는 효과를 줄 수 있음.</string>
    <string name="눈썹다듬기">1. 눈썹 다듬는 법</string>
</resources>