<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.WelcomeActivity">


        <TextView
            android:id="@+id/logoutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="50dp"
            android:text="@string/loginauthentic"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/welcome_font"
            android:gravity="center"
            android:padding="20dp"
            android:text="WASSUP"
            android:textColor="@color/black1"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp">

            <Button
                android:id="@+id/SigninBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textColor="@color/black1"
                android:text="@string/로그인"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/SignupBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/가입하기버튼"
            android:textColor="@color/black1"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>