<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_background"
            android:gravity="top"
            android:onClick="hidekeyboard"
            android:orientation="vertical"
            android:padding="15dp"
            tools:context=".register.RegisterActivity">

            <LinearLayout
                android:id="@+id/cancelBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="top|right"
                android:orientation="vertical"
                android:background="@drawable/ic_baseline_arrow_back_ios_new_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:textColor="@color/black1"
                android:text="@string/sign_up"
                android:textSize="40sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="To join the Eye brows community"
                android:textColor="@color/black1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Your name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="name"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/아이디"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idEdt2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="example@naver.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/비밀번호"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pwEdt2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Password"
                android:inputType="textPassword" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="Male" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="Female" />

            </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:checked="true"
                android:minHeight="48dp"
                android:text="이용약관에 동의합니다." />

            <TextView
                android:layout_width="20dp"
                android:layout_height="60dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mildpink"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/signBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black1"
                    android:text="회원가입"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>